...
//    @{@"image":@"message"},
//    @{@"image":@"mine"}
    NSArray * configArr =@[
                           @{@"title":@"首页",@"image":@"home",@"viewController":@"LQHomeViewController"},
                           @{@"title":@"发现",@"image":@"discover",@"viewController":@"LQDiscoverViewController"},
                           @{@"title":@"消息",@"image":@"message",@"viewController":@"LQMessageViewController"},
                           @{@"title":@"我的",@"image":@"mine",@"viewController":@"LQMineViewController"}
                           ];
    NSMutableArray * arrViewController = [[NSMutableArray alloc] init];
    for(NSDictionary * dict  in configArr){
        [arrViewController addObject:[self setupNavWithDict:dict]];
    }
    
...
