...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LVj-zg-Hws">
                    <rect key="frame" x="16" y="157" width="343" height="41"/>
                    <color key="backgroundColor" red="0.27602126589999998" green="0.51723588300000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="41" id="DaR-De-0qu"/>
                    </constraints>
                    <state key="normal" title="确  定">
                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rMs-ec-8ek">
                    <rect key="frame" x="165" y="400" width="46" height="30"/>
                    <state key="normal" title="Button"/>
...
